--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@ minecraft_version=1.18.2
 yarn_mappings=1.18.2+build.3
 loader_version=0.14.4
 # Mod Properties
-mod_version=1.0-SNAPSHOT
+mod_version=1.0.0
 maven_group=io.github.darkkronicle
-archives_base_name=RefinedInventory
+archives_base_name=ProximityChat
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.51.1+1.18.2
